--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-badge"><span class="glyphicon glyphicon-breifcase"></span></div>
+                        <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"> </span></div>
                         <div class="timeline-panel-container">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -83,7 +83,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-badge"><span class="glyphicon glyphicon-breifcase"></span></div>
+                        <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"> </span></div>
                         <div class="timeline-panel-container-inverted">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -98,7 +98,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-badge"><span class="glyphicon glyphicon-breifcase"></span></div>
+                        <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"></span></div>
                         <div class="timeline-panel-container">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -114,7 +114,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-badge"><span class="glyphicon glyphicon-breifcase"></span></div>
+                        <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"> </span></div>
                         <div class="timeline-panel-container-inverted">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
