--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li><a href="#about">Moi</a></li>
-                        <li><a href="#skills">Compétances</a></li>
+                        <li><a href="#skills">Compétences</a></li>
                         <li><a href="#experience">Expériences</a></li>
                         <li><a href="#education">Education</a></li>
                         <li><a href="#portfolio">Portfolio</a></li>
